--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </li>
           </ul>
         </nav>
-        <div class="menu-logo">
+        <div id="menu-logo" class="menu-logo">
         </div>
       </div>
       <div class="sub-header">
