--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="">ABOUT</a></li>
             <li><a href="">SERVICING</a></li>
             <li><a href="">PORTFOLIO</a></li>
-            <li><a href="">BLOG</a></li>
+            <li><a href="">Мирлан</a></li>
             <li><a href="">CONTACT US</a></li>
           </ul>
         </nav>
