--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="">ABOUT</a></li>
             <li><a href="">SERVICING</a></li>
             <li><a href="">PORTFOLIO</a></li>
-            <li><a href="">BLOG</a></li>
+            <li><a href="">Мирлан</a></li>
             <li><a href="">CONTACT US</a></li>
             <li>
               <div class="phone-search">
